# windows-text-to-speech

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: release.yml
crates/windows_tts_cli/: Cargo.toml  build.rs
crates/windows_tts_cli/src/: main.rs
crates/windows_tts_engine/: Cargo.toml
crates/windows_tts_engine/src/: com_server.rs  detect_languages.rs  lib.rs  logging.rs  voices.rs
crates/windows_tts_engine_dll/: Cargo.toml  install_text_to_speech.reg
crates/windows_tts_engine_dll/src/: lib.rs
crates/windows_tts_engine_installer/: Cargo.toml  build.rs
crates/windows_tts_engine_installer/src/: main.rs
crates/windows_tts_engine_piper_dll/: Cargo.toml
crates/windows_tts_engine_piper_dll/src/: lib.rs
src/: main.rs
