[workspace]
members = ["crates/*"]
resolver = "2"

# Ensure `cargo run` works:
default-members = ["crates/windows_tts_cli"]

# More info at: https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace.package]
version = "0.2.6"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
repository = "https://github.com/Lej77/windows-text-to-speech"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Declare common crates here so that we can easily keep the version in sync when we upgrade:
windows-core = "0.59.0" # Required by macros sometimes
windows = "0.59.0"
winresource = "0.1.19"
log = "0.4.25"